<resources>
    <string name="app_name">ImplicitIntent</string>
    <string name="editText_uri">http://facebook.com</string>
    <string name="button_uri">Open Website</string>

    <string name="editText_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="editText_share">\'Twas brilling and the slithy toves</string>
    <string name="button_share">Share this text</string>

    <string name="editText_dial">0164197065</string>
    <string name="button_dial">Call</string>
</resources>
